--- a/posts/2022-12-19-climate-ai-debate/index.qmd
+++ b/posts/2022-12-19-climate-ai-debate/index.qmd
@@ -26,3 +26,34 @@ This is a short podcast by myself and Lewis White where we debate using nudging 
 ::: {style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"}
 <a href="https://soundcloud.com/user-613180964" title="elkewind" target="_blank" style="color: #cccccc; text-decoration: none;">elkewind</a> · <a href="https://soundcloud.com/user-613180964/debating-nudging-and-ai-for-climate" title="Debating Nudging and AI for Climate" target="_blank" style="color: #cccccc; text-decoration: none;">Debating Nudging and AI for Climate</a>
 :::
+
+## References
+
+1.  Ahmad, M. Usman, Afif Hanna, Ahmed-Zayn Mohamed, Alex Schlindwein, Caitlin Pley,
+    Ingrid Bahner, Rahul Mhaskar, Gavin J. Pettigrew, and Tambi Jarmi. \"A Systematic
+    Review of Opt-out Versus Opt-in Consent on Deceased Organ Donation and
+    Transplantation (2006-2016).\" World Journal of Surgery 43, no. 12 (December 2019):
+    3161--71. https://doi.org/10.1007/s00268-019-05118-4.
+2.  Bartmann, Marius. \"The Ethics of AI-Powered Climate Nudging---How Much AI Should
+    We Use to Save the Planet?\" Sustainability 14, no. 9 (January 2022): 5153.
+    https://doi.org/10.3390/su14095153.
+3.  BirdReturns. \"BirdReturns.\" Accessed December 7, 2022. https://birdreturns.org/.
+    Clifford, Catherine. \"More than 80% Say They\'d Change Their Behavior to Fight Climate Change, but U.S. Conservatives Lag.\" CNBC. Accessed December 7, 2022. https://www.cnbc.com/2021/09/14/climate-change-to-change-behavior-80percent-of-respondents-tell-pew.html.
+4.  He, Tianzhi, Farrokh Jazizadeh, and Laura Arpan. \"AI-Powered Virtual Assistants Nudging
+    Occupants for Energy Saving: Proactive Smart Speakers for HVAC Control.\" Building Research & Information 50, no. 4 (May 19, 2022): 394--409. https://doi.org/10.1080/09613218.2021.2012119.
+5.  McGovern, Amy, Imme Ebert-Uphoff, David John Gagne, and Ann Bostrom. \"Why We Need to Focus on Developing Ethical, Responsible, and Trustworthy Artificial
+    Intelligence Approaches for Environmental Science.\" Environmental Data Science 1
+    (2022): e6. https://doi.org/10.1017/eds.2022.5.
+6.  Nordgren, Anders. \"Artificial Intelligence and Climate Change: Ethical Issues.\" Journal of
+    Information, Communication and Ethics in Society ahead-of-print, no. ahead-of-print
+    (January 1, 2022). https://doi.org/10.1108/JICES-11-2021-0106.
+7.  Open Transcripts. \"Harnessing Artificial Intelligence to Target Conservation Efforts - Carla Gomes.\" Accessed December 7, 2022. http://opentranscripts.org/transcript/artificial-intelligence-to-target-conservation/.
+8.  Resources for the Future. \"Nudging Behavior Toward Climate Solutions, with Elke Weber.\"
+    Accessed December 7, 2022.
+
+					
+				
+			
+		
+
+	
