--- a/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
+++ b/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
@@ -90,8 +90,8 @@ ggplot(tidy_fish_data, aes(x = length_cm)) +
   geom_histogram(fill = "#38b6ba", bins = 60) +
   theme_minimal() +
   labs(title = "Fig 1. Histogram of species length") +
-  theme(panel.background = element_rect(fill = "#f7f2e6"),
-        plot.background = element_rect(fill = "#f7f2e6"),
+  theme(panel.background = element_rect(fill = "#F8F8F8"),
+        plot.background = element_rect(fill = "#F8F8F8"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_line(colour = '#c9c9c9'),
         panel.border = element_rect(colour = "black", fill=NA, size=1)) +
@@ -136,8 +136,8 @@ gg_len <- ggplot(data = rm_len_na, aes(x = length_cm,
   labs(x = "Species length (cm)", 
        y = "Listed as threatened", 
        title = "Fig 2. Probability of being threatened by species length") +
-  theme(panel.background = element_rect(fill = "#f7f2e6"),
-        plot.background = element_rect(fill = "#f7f2e6"),
+  theme(panel.background = element_rect(fill = "#F8F8F8"),
+        plot.background = element_rect(fill = "#F8F8F8"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_line(colour = '#c9c9c9'),
         panel.border = element_rect(colour = "black", fill=NA, size=1))
@@ -169,8 +169,8 @@ gg_rm_out <- ggplot(data = rm_outliers, aes(x = length_cm,
               alpha = 0.8, col = "#38b6ba") +
   labs(x = "Species length (cm)", y = "Listed as threatened", title = "Fig 3. Probability of being threatened by species length \n (excluding outliers)") +
   theme_minimal() +
-  theme(panel.background = element_rect(fill = "#f7f2e6"),
-        plot.background = element_rect(fill = "#f7f2e6"),
+  theme(panel.background = element_rect(fill = "#F8F8F8"),
+        plot.background = element_rect(fill = "#F8F8F8"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_line(colour = '#c9c9c9'),
         panel.border = element_rect(colour = "black", fill=NA, size=1))
@@ -216,8 +216,8 @@ len_odds_plot <- ggplot(length_plus, aes(x = length_cm,
   labs(x = "Species length (cm)", 
        title = "Fig 4. Odds of being threatened by species length") +
   theme_minimal() +
-  theme(panel.background = element_rect(fill = "#f7f2e6"),
-        plot.background = element_rect(fill = "#f7f2e6"),
+  theme(panel.background = element_rect(fill = "#F8F8F8"),
+        plot.background = element_rect(fill = "#F8F8F8"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_line(colour = '#c9c9c9'),
         panel.border = element_rect(colour = "black", fill=NA, size=1))
