--- a/posts/2023-03-29-art-and-science/index.qmd
+++ b/posts/2023-03-29-art-and-science/index.qmd
@@ -31,6 +31,10 @@ I am currently working on a collaborative capstone project modeling habitat suit
 
 ![](hex_sticker.png)
 
+```{=html}
+<div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/813056709?h=241c8221fc&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="fish_vid"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+```
+
 ### Environmental Non-Profit Social Media Campaign:
 
 In 2022, I assisted with a social media campaign by [The LENA Project](https://www.thelenaproject.org/) to provide monthly information and suggestions on environmental related topics. Here are two of the designs I created for this campaign.
