updated blog post

--- a/posts/2023-03-29-art-and-science/index.qmd
+++ b/posts/2023-03-29-art-and-science/index.qmd
@@ -52,6 +52,13 @@ In 2021, I participated in (as well as volunteered for) [Prompt for the Planet \
 ```{=html}
 <iframe width="780" height="500" src="https://promptfortheplanetarchive.omeka.net/items/show/45" title="The Hurricane's Eye on Prompt for the Planet"></iframe>
 ```
+### Environmental Non-Profit Fundraising:
+In 2021 I designed a yard sign for The LENA Project that they sold as a fundraiser and as a campaign to promote unfertilized lawns. In 2023 I updated the design for the continuation of the campaign. 
+
+![](bee-sign)
+
+![](Bee_Sign_2.jpg)
+
 ### Journalism:
 
 In 2020, my art was sourced by [The Lutrinae](https://thelutrinae.com/2021/02/aquarium-volunteers-await-reopening/) in an article about the Monterey Bay Aquarium reopening after shutting down during the pandemic.
