--- a/posts.qmd
+++ b/posts.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Blog"
+title: "My Work"
 listing:
   contents: posts # all Quarto docs in the `posts` directory will be included on your listing page
-  type: grid # or `default` or `table`; each type has its own set of yaml options to include
+  type: default # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
 ---
