--- a/posts/2023-08-19-python-viz/index.qmd
+++ b/posts/2023-08-19-python-viz/index.qmd
@@ -19,7 +19,7 @@ page-layout: full
 
 ## Visualizing Various Data Types from the kelpGeoMod Data Repository
 
-This post uses data from the kelpGeoMod data repository and provides examples of data visualization in Python using plotly, and folium.
+This post uses data from the kelpGeoMod data repository and provides examples of data visualization in Python using Folium, Plotly, Matplotlib, and Rasterio.
 
 ```{python}
 # Import necessary libraries
@@ -34,12 +34,6 @@ from folium import DivIcon
 from IPython.display import display
 import rasterio
 import rasterio.plot
-
-# import base64
-# from io import BytesIO
-# from PIL import Image
-# from ipyleaflet import Map, ImageOverlay, basemaps
-# from matplotlib.colors import LinearSegmentedColormap
 import matplotlib.pyplot as plt
 from rasterio.warp import transform_geom
 from matplotlib import rcParams
@@ -99,7 +93,6 @@ folium.GeoJson(aoi_84.to_json(), style_function=style_function).add_to(m)
 
 # Display the map
 display(m)
-m.location
 ```
 
 ### Visualizing kelp data:
@@ -158,7 +151,7 @@ sum_kelp["Season"] = sum_kelp.apply(generate_season, axis=1)
 print(sum_kelp.head())
 ```
 
-Here I show the kelp area over time with the help of plotly!
+Here I show the kelp area over time with the help of Plotly!
 
 ```{python}
 #| warning: false
@@ -205,7 +198,7 @@ fig.show()
 
 ### Visualizing nutrient data:
 
-Next I visualize the ocean nutrient data based on averages of the seasonal values over time with plotly. Similarly, I needed to do a little wrangling first.
+Next I visualize the ocean nutrient data based on averages of the seasonal values over time with Plotly. Similarly, I needed to do a little wrangling first.
 
 ```{python}
 #| warning: false
